--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bulma": "^0.7.2",
     "cors": "^2.8.5",
     "express": "^4.16.4"
   }
